# plantgeo

./: .dockerignore  .env.example  .gitignore  Dockerfile  PLAYBOOK.md  dev.ps1  dev.sh  docker-compose.yml  next.config.ts  package-lock.json  package.json  railway.json  vitest.config.ts
.claude/: CLAUDE.md
.omc/: .project-memory.json.tmp.bd85ed4b-db39-4c06-8521-01f198659863  .project-memory.json.tmp.e2ca9faa-7d3c-4746-b776-e23bd12f28a7  project-memory.json  ultrawork-state.json
conductor/: .conductor_session_log  PLAYBOOK.md  product-guidelines.md  product.md  tech-stack.md  tracks.md
docs/: README.md  api-reference.md  architecture.md  components.md  database.md  deployment.md  diagrams.md  env-vars.md  schema.dbml  (+1 more)
services/agri-data-service/: .env.example  .gitignore  Dockerfile  Makefile  docker-compose.yml  mypy.ini  pyproject.toml  ruff.toml
services/agri-data-service/alembic/: env.py  script.py.mako
services/agri-data-service/infra/db/: init-extensions.sql
services/agri-data-service/infra/martin/: config.yaml
services/agri-data-service/src/agri_data_service/: __init__.py  app.py  cli.py  config.py
services/agri-data-service/src/agri_data_service/db/: base.py  engine.py
services/agri-data-service/src/agri_data_service/models/: __init__.py  knowledge.py  location.py  profiles.py  species.py  strategy.py
services/agri-data-service/src/agri_data_service/routes/: __init__.py  health.py  locations.py  species.py  strategies.py
services/agri-data-service/src/agri_data_service/seed/: strategies.py
services/agri-data-service/tests/: conftest.py
(+408 files in other folders)
