[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agri-data-service"
version = "0.1.0"
description = "Regenerative agriculture data warehouse and API for PlantGeo"
requires-python = ">=3.12"
dependencies = [
    "sanic>=24.6",
    "sanic-ext>=23.12",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "geoalchemy2>=0.15",
    "pgvector>=0.3",
    "alembic>=1.13",
    "redis[hiredis]>=5.0",
    "celery[redis]>=5.4",
    "structlog>=24.1",
    "click>=8.1",
    "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-sanic>=1.9",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.5",
    "mypy>=1.10",
    "factory-boy>=3.3",
]

[project.scripts]
agri-cli = "agri_data_service.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/agri_data_service"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
